--- a/fi.html
+++ b/fi.html
@@ -6,7 +6,7 @@
     <title>Main Page</title>
 </head>
 <body>
-    <h1>Welcome to the Employee Page</h1>
+    <h1>Welcome to the Employee Page1</h1>
     <p>Click the link below to view employee details</p>
     <p>hello engineer raed </p>
     <a href="emp.html">Go to Employee Page</a>
