Update fi.html adding a text

--- a/fi.html
+++ b/fi.html
@@ -9,6 +9,7 @@
     <h1>Welcome to the Employee Page1</h1>
     <p>Click the link below to view employee details</p>
     <p>hello engineer raed </p>
+    <p>go to see salaries </p>
     <a href="emp.html">Go to Employee Page</a>
 </body>
 </html>
