--- a/fi.html
+++ b/fi.html
@@ -10,6 +10,6 @@
     <p>Click the link below to view employee details</p>
     <p>hello engineer raed </p>
     <p>go to see salaries </p>
-    <a href="emp.html">Go to Employee Page</a>
+    <a href="emp.html">Go to Employee Page1</a>
 </body>
 </html>
